syntax = "proto3";

// Package Discover is used to find other Peers in the sonr network.
package sonrhq.highway.discovery.v1;
import "common/peer.proto";

// option go_package = "github.com/sonr-hq/sonr/pkg/protocol/discovery/types/v1";

// LobbyMessage is message passed from Peer in Lobby
message NearbyChannelMessage {
  sonrhq.common.Peer from = 1;     // Users Peer Data
  bytes body = 2;    // Payload is the message data
  bytes signature = 3;             // Signature of the Attached Data
  int64 created_at = 4; // Timestamp
}

message RefreshEvent {
  string topic_name = 1;
  repeated sonrhq.common.Peer peers = 2;
  int64 received_at = 3;
}
